# pico-pagers

./: .gitignore  .gitmodules  README.md  api.txt  lfs.sh  program.sh  rp2040_clion.cfg
docs/: lab.tex
docs/img/: plot_freq.ods
docs/img/graphs/: graphs.drawio  wifi_scan_graph.drawio
pagers-client/: CMakeLists.txt  main.cpp
pagers-common/: CMakeLists.txt  circularbuffer.cpp  circularbuffer.hpp  crc.cpp  crc.hpp  fs.cpp  fs.hpp  fsutil.cpp  fsutil.hpp  physical.cpp  physical.hpp  protocol.cpp  protocol.hpp  security.cpp  security.hpp
pagers-server/: CMakeLists.txt  main.cpp  wififs.cpp  wififs.hpp
pagers-server/dhcpserver/: dhcpserver.c  dhcpserver.h
pagers-server/dnsserver/: dnsserver.h
pagers-server/http/: http.hpp  httpserver.cpp  httpserver.hpp  httpserverclient.cpp  httpserverclient.hpp  mime.cpp  mime.hpp
pagers-server/lfs/static/: config.js  index.html  main.js  pagers.js  pair.js  script.js  style.css  wifi.js
pagers-server/pagers/: pager.cpp  pager.hpp  pagerlist.cpp  pagerlist.hpp
